--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 <p>💰 Price: $199</p>
                             </div>
                             <hr>
-                            <div class="flex justify-end gap-2 mt-3">
+                            <div class="flex flex-col lg:flex-row justify-end gap-2 mt-3">
                                 <button class="border rounded-lg py-1 px-3 flex items-center hover:bg-gray-100">👍 Like</button>
                                 <button class="border rounded-lg py-1 px-3 text-green-500 hover:bg-green-100">Adopt</button>
                                 <button class="border rounded-lg py-1 px-3 text-blue-500 hover:bg-blue-100">Details</button>
