div create remove

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <button id="showModal" class="btn hidden " onclick="customModal.showModal()">open modal</button>
 <dialog  id="customModal" class="modal ">
   <div class="modal-box">
-    <div id="modal-container">
+    <div id="modal-container" class="space-y-4">
 
     </div>
     <div class="space-y-3">
