spinner dynamic vaba load and grid div image dynamic vaba emety

--- a/index.html
+++ b/index.html
@@ -92,8 +92,16 @@
             <button class="btn btn-success text-white px-4 py-2 rounded-lg shadow">Sort by Price</button>
         </div>
     </section>
+      <!-- loading spinner star -->
+      <div id="load-spinner" class="text-center hidden">
+        <span class="loading loading-infinity loading-xs"></span>
+    <span class="loading loading-infinity loading-sm"></span>
+    <span class="loading loading-infinity loading-md"></span>
+    <span class="loading loading-infinity loading-lg"></span>
+    <span class="loading loading-infinity loading-xl"></span>
+    </div>
+    <!-- loading spinner end -->
         <!-- Adoption Section end -->
-
     <!-- card -section star-->
     <section  class="w-11/12 mx-auto">
         <!-- pet card -->
@@ -128,7 +136,7 @@
   </div>
     </dialog>
     <!-- modal show end -->
-
+  
     <!-- Footer -->
     <footer class="bg-gray-900 text-white">
         <div class="container mx-auto px-4 py-12">
