responsive dynamic button

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <p class="text-center text-gray-600 mb-8">It is a long established fact that a reader will be distracted...</p>
         
         <!-- Pet Categories Tabs -->
-        <div id="btn-container" class="flex flex-col md:flex-row lg:flex-row justify-center gap-4 mb-8">      
+        <div id="btn-container" class="flex flex-col w-2/4 mx-auto  md:flex-row lg:flex-row justify-center gap-4 mb-8">      
 
         </div>
         
